<resources>
    <string name="app_name">GreenRoots</string>
    <string name="AppName">GreenRoots</string>
    <string name="welcome">Bienvenidos</string>
    <string name="inicioMenu">Inicio</string>
    <string name="productosMenu">Productos</string>
    <string name="carritoMenu">Carrito</string>
    <string name="perfilMenu">Perfil</string>
    <string name="categoriaMenu">Categorias</string>
    <string name="navigation_close">close</string>
    <string name="navigation_open">abrir\n</string>
    <string name="appName">GreenRoots</string>
    <string name="textRegisterHome">Regístrate</string>
    <string name="textRegister">Regístrar</string>
    <string name="textRecoveryPassword">Recuperar</string>
    <string name="textBeginHome">Comienza</string>
    <string name="textSignInLogin">Ingresar</string>
    <string name="textRecoverPasswordLogin">Recuperar Tu Contraseña</string>
    <string name="textWelcomeHome">Inicia una nueva aventura con MessagesFlash y descubre una nueva forma de ver el mundo</string>
    <string name="textWelcomeLogin">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="textGoogleLogin">Ingresa con Google</string>
    <string name="textNoCountLogin">¿No tienes cuenta?</string>
    <string name="textYesCountRegister">¿Ya tienes cuenta?</string>
    <string name="textInstructiveRegister">Rellena los siguientes datos</string>
    <string name="textConfirmPasswordRegister">Confirmar contraseña</string>
    <string name="textPasswordRegister">Contraseña</string>
    <string name="textPhoneRegister">Telefono</string>
    <string name="textEmailRegister">Email</string>
    <string name="textLastNameRegister">Apellidos</string>
    <string name="textNameRegister">Nombres</string>
    <string name="textTermsRegister">Acepto los términos y condiciones</string>
    <string name="textInstruvtiveRecoveryPassword">Por favor digitar correo electronico para la recuperación de la contraseña</string>
    <string name="textProfile">Editar</string>
    <string name="textGoBack">Regresar</string>
    <string name="TittleFragmentProdructos">Productos</string>
    <string name="nameProduct1">Cepillo para cabello</string>
    <string name="priceProduct1">$15.000</string>
    <string name="descriptionProduct1">Descripción: Cepillo dental eco-amigable con mango de bambú biodegradable y cerdas suaves. Alternativa sostenible que limpia eficazmente mientras reduce la huella de plástico en el planeta.</string>
    <string name="amountProduct1">Cantidad: 4</string>
    <string name="amountProduct2">Cantidad: 7</string>
    <string name="textAddCart">Añadir a carrito</string>
    <string name="amountProduct3">Cantidad: 7</string>
    <string name="nameProduct2">Camisa</string>
    <string name="nameProduct3">Sombras</string>
    <string name="priceProduct5">21.000</string>
    <string name="nameProduct5">Acuarelas</string>
    <string name="nameProduct4">Cuadernos</string>
    <string name="priceProduct4">13.000</string>
    <string name="priceProduct3">30.000</string>
    <string name="priceProduct2">27.000</string>
    <string name="amountProduct5">Cantidad: 9</string>
    <string name="TittleFragmentProfile">Perfil</string>
    <string name="TittleFragmentCategorias">Categorias</string>
    <string name="amountProductsCategory1">No. de productos: 1</string>
    <string name="nameCategory1">Electrónica</string>
    <string name="nameCategory2">Ropa</string>
    <string name="nameCategory3">Hogar</string>
    <string name="nameCategory4">Deportes</string>
    <string name="nameCategory5">Accesorios</string>
    <string name="tittleFragmentCategorySports">Fragment de categoria deportes</string>
    <string name="tittleFragmentCategoryAccessories">Fragment de categoria accesorios</string>
    <string name="tittleFragmentCategoryElectronics">Fragment de categoria electronica</string>
    <string name="tittleFragmentCategoryHome">Fragment de categoria hogar</string>
    <string name="tittleFragmentCategoryClothes">Fragment de categoria ropa</string>
    <string name="textWelcomeStartAdmin">Bienvenido a GreenRoots Admin!!!</string>
    <string name="textWelcomeStartClient">Bienvenido a GreenRoots Cliente!!!</string>
    <string name="textDescriptionAppStart">GreenRoots es una tienda ecológica en línea que ofrece productos sostenibles y amigables con el medio ambiente. Conecta a consumidores responsables con marcas y productores comprometidos con prácticas éticas.</string>
    <string name="textEmptyCart">Tu carrito está vacío</string>
    <string name="textTotalDefect">Total: $0</string>
    <string name="textBuy">Comprar</string>
    <string name="textDelete">Eliminar</string>
    <string name="plusSign">+</string>
    <string name="numDefectAmount">1</string>
    <string name="minusSign">-</string>
    <string name="TittleFragmentCarrito">Carrito de compras</string>
    <string name="TittleFragmentEditProfile">Editar Perfil</string>
    <string name="comprasMenu">Compras</string>
    <string name="mapaMenu">Tiendas</string>
    <string name="textAmount">Cantidad:</string>
    <string name="TittleFragmentDirections">Mapa - Tiendas</string>
    <string name="NameDirectionStore1">– Verde pluma – Tv. 69b Bis #72-2 a 72-86</string>
    <string name="NameDirectionStore2">- Verde pluma - Cra. 70 Bis #71a-2 a 71a-94</string>
    <string name="gProductos">Gestión de productos</string>
    <string name="v_productos">Ver productos</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="price">$ 0.000</string>
    <string name="a_producto">Añadir producto</string>
    <string name="d_añadir">Añade un nuevo producto al sistema</string>
    <string name="btn_cargar_imagen">Cargar imagen</string>
    <string name="btn_guardar">Guardar</string>
    <string name="t_imagen">Imagen:</string>
    <string name="no_seleccionado">No seleccionado</string>
    <string name="empresa">Empresa:</string>
    <string name="t_empresa">Empresa</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="d_editar">Edita el producto seleccionado</string>
    <string name="titulo">Título:</string>
    <string name="precio">Precio:</string>
    <string name="descripcion">Descripción:</string>
    <string name="razon_ecologica">Razón ecológica:</string>
    <string name="categoria">Categoría:</string>
    <string name="textChangePhoto">Cambiar foto</string>
    <string name="TittleFragmentComprar">Comprar</string>
    <string name="textBuyCard">Pagar con tarjeta</string>
    <string name="textEjNoCard">10xx-232x-x3x4-x1x6</string>
    <string name="textLabelNoCard">No. Tarjeta</string>
    <string name="textLabelCaducidad">Caducidad</string>
    <string name="textEjCaducidad">Ej: 10/28</string>
    <string name="textLabelCodSecurity">Cod. Seguridad</string>
    <string name="textBuy2">Pagar</string>
    <string name="textEjCodSecurity">1x4</string>
    <string name="TittleFragmentCompras">Compras</string>
    <string name="textEmptySellers">No hay vendedores registrados</string>
    <string name="TittleFragmentSellers">Gestion de Vendedores</string>
    <string name="textAddSeller">Crear vendedor</string>
    <string name="textDeleteSeller">Sí, seguro</string>
    <string name="textEditSeller">Editar vendedor</string>
    <string name="textEditCategory">Editar Categoria</string>
    <string name="textTittleRegisterCategory">Titulo</string>
    <string name="textDescriptionRegisterCategory">Descripción</string>
    <string name="textAddCategory">Crear Categoria</string>
    <string name="textEmptyCategory">No hay categorias registradas</string>
    <string name="TittleFragmentCategory">Gestionar Categorias</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="textWelcomeStartSeller">Bienvenido a GreenRoots Vendedor!!!</string>
    <string name="t_vendedor">Vendedor</string>
    <string name="vendedor">Vendedor</string>
</resources>