<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_product_card"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textEditSeller"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etEditNameSeller"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:fontFamily="serif"
        android:textSize="16sp"
        android:textColor="@color/black"
        style="@style/EditTextRounded"
        android:layout_marginBottom="8dp"
        android:hint="@string/textNameRegister" />

    <EditText
        android:id="@+id/etEditLastNameSeller"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:fontFamily="serif"
        android:textSize="16sp"
        android:textColor="@color/black"
        style="@style/EditTextRounded"
        android:layout_marginBottom="8dp"
        android:hint="@string/textLastNameRegister" />

    <EditText
        android:id="@+id/etEditEmailSeller"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:fontFamily="serif"
        android:textSize="16sp"
        android:textColor="@color/black"
        style="@style/EditTextRounded"
        android:layout_marginBottom="8dp"
        android:hint="@string/textEmailRegister" />

    <EditText
        android:id="@+id/etEditPhoneSeller"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="phone"
        android:fontFamily="serif"
        android:textSize="16sp"
        android:textColor="@color/black"
        style="@style/EditTextRounded"
        android:layout_marginBottom="8dp"
        android:hint="@string/textPhoneRegister" />

    <EditText
        android:id="@+id/etEditPasswordSeller"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:fontFamily="serif"
        android:textSize="16sp"
        android:textColor="@color/black"
        style="@style/EditTextRounded"
        android:layout_marginBottom="8dp"
        android:hint="@string/textPasswordRegister" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEditSeller"
        android:backgroundTint="@color/green"
        android:textColor="@color/whiteInputs"
        android:paddingHorizontal="32dp"
        app:strokeColor="@color/orange"
        app:strokeWidth="2dp"
        android:fontFamily="serif"
        />

</LinearLayout>