<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E0E0E0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded_white"
        android:padding="24dp"
        android:elevation="4dp">

        <!-- Título principal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_producto"
            android:fontFamily="@font/inria_serif_light"
            android:textColor="#0A9C4D"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inria_serif_light"
            android:text="@string/d_añadir"
            android:textColor="@color/gray2"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"/>

        <!-- Campos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textColor="#000" />

            <EditText
                android:id="@+id/etTitulo"
                style="@style/StyledInput"
                android:hint="@string/titulo"
                />
        </LinearLayout>

        <!-- Repite el bloque anterior para los siguientes campos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <TextView
                android:text="@string/precio"
                android:textColor="#000"
                android:layout_height="20dp"
                android:layout_width="wrap_content"
                />
            <EditText
                android:id="@+id/etPrecio"
                style="@style/StyledInput"
                android:inputType="numberDecimal"
                android:hint="@string/precio" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <TextView
                android:text="@string/descripcion"
                android:textColor="#000"
                android:layout_height="20dp"
                android:layout_width="wrap_content"
                />
            <EditText
                android:id="@+id/etDescripcion"
                style="@style/StyledInput"
                android:inputType="textMultiLine"
                android:lines="3"
                android:gravity="top"
                android:hint="@string/descripcion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <TextView
                android:text="@string/razon_ecologica"
                android:textColor="#000"
                android:layout_height="20dp"
                android:layout_width="wrap_content"
                />
            <EditText
                android:id="@+id/etRazon"
                style="@style/StyledInput"
                android:hint="@string/razon_ecologica" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">

            <TextView android:text="@string/categoria"
                android:textColor="#000"
                android:layout_height="20dp"
                android:layout_width="wrap_content"
                />
            <EditText
                android:id="@+id/etCategoria"
                style="@style/StyledInput"
                android:hint="@string/categoria" />
        </LinearLayout>

        <!-- Imagen -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/empresa"
                android:textColor="#000"
                android:layout_height="20dp"
                android:layout_width="wrap_content"/>

            <EditText
                android:id="@+id/etEmpresa"
                style="@style/StyledInput"
                android:hint="@string/t_empresa" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnSeleccionarImagen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/green"
                app:strokeWidth="2dp"
                app:strokeColor="@color/orange"
                android:text="@string/seleccionar_imagen" />
        </LinearLayout>


        <!-- Botón guardar -->
        <Button
            android:id="@+id/btnGuardarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:backgroundTint="@color/green"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"
            android:textColor="@color/white"
            android:padding="12dp" />

    </LinearLayout>


</ScrollView>
