<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tvWelcomeAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWelcomeStartAdmin"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvWelcomeSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWelcomeStartSeller"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvWelcomeClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWelcomeStartClient"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvDescriptionApp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/textDescriptionAppStart"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        />

</LinearLayout>