<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/logoAppRecoveryPassword"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo"
            />

        <TextView
            android:id="@+id/textInstructiveRecoveryPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textInstruvtiveRecoveryPassword"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/etEmailRecoveryPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:fontFamily="serif"
            android:textSize="16sp"
            android:textColor="@color/black"
            style="@style/EditTextRounded"
            android:layout_marginTop="20dp"
            android:hint="@string/textEmailRegister"
            />

        <Button
            android:id="@+id/buttonRecoveryPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:fontFamily="serif"
            android:text="@string/textRecoveryPassword"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:strokeColor="@color/orange"
            app:strokeWidth="3dp"
            />

        <TextView
            android:id="@+id/textGoBackRecoveryPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textGoBack"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</ScrollView>